Stripped down to only what is needed with substrate

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "MeridianJB"]
-	path = MeridianJB
-	url = https://github.com/pwn20wndstuff/MeridianJB.git
-[submodule "libjailbreak"]
-	path = libjailbreak
-	url = https://github.com/pwn20wndstuff/libjailbreak.git
+[submodule "unrestrict"]
+	path = unrestrict
+	url = https://github.com/sbingner/unrestrict.git
