--- a/layout/DEBIAN/control
+++ b/layout/DEBIAN/control
@@ -1,5 +1,5 @@
 Package: science.xnu.undecimus.resources
-Version: 0.12
+Version: 0.13~b5
 Architecture: iphoneos-arm
 Description: Resources used by Unc0ver
 Maintainer: Sam Bingner <maintainer@sbdhi.com>
